--- a/advisor_study_project/advisor_experiment/templates/advisor_experiment/Block2EndSurvey.html
+++ b/advisor_study_project/advisor_experiment/templates/advisor_experiment/Block2EndSurvey.html
@@ -10,9 +10,8 @@
 <div class="card m-3">
     <div class="card-body">
         <h5>{{ high_name }}</h5>
-        <p>Your confidence in {{ high_name }}'s accuracy (0 = not at all confident, 100 = completely confident):</p>
-        <input type="range" name="confidence_C" id="id_confidence_C" min="0" max="100" value="50" class="form-range" style="max-width: 300px;">
-        <span id="confidence_C_value">50</span>
+        <p>How accurate do you believe {{ high_name }} was?</p>
+        {{ form.confidence_C }}
         {{ formfield_errors 'confidence_C' }}
         <hr>
         <p>How much would you pay (in cents, 0–20) for {{ high_name }}'s advice in a given round?</p>
@@ -25,9 +24,8 @@
 <div class="card m-3">
     <div class="card-body">
         <h5>{{ low_name }}</h5>
-        <p>Your confidence in {{ low_name }}'s accuracy (0–100):</p>
-        <input type="range" name="confidence_D" id="id_confidence_D" min="0" max="100" value="50" class="form-range" style="max-width: 300px;">
-        <span id="confidence_D_value">50</span>
+        <p>How accurate do you believe {{ low_name }} was?</p>
+        {{ form.confidence_D }}
         {{ formfield_errors 'confidence_D' }}
         <hr>
         <p>How much would you pay (in cents, 0–20) for {{ low_name }}'s advice in a given round?</p>
@@ -43,9 +41,7 @@
         var v = document.getElementById(valueId);
         if (s && v) { s.oninput = function() { v.textContent = this.value; }; }
     }
-    syncSlider('id_confidence_C', 'confidence_C_value');
     syncSlider('id_pay_C', 'pay_C_value');
-    syncSlider('id_confidence_D', 'confidence_D_value');
     syncSlider('id_pay_D', 'pay_D_value');
 </script>
 
